--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,5 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+URL: https://github.com/djnavarro/quartose
+BugReports: https://github.com/djnavarro/quartose/issues
