--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 URL: https://github.com/djnavarro/quartose
 BugReports: https://github.com/djnavarro/quartose/issues
+Imports: 
+    purrr,
+    rlang
