--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,5 +11,6 @@ RoxygenNote: 7.3.2
 URL: https://github.com/djnavarro/quartose
 BugReports: https://github.com/djnavarro/quartose/issues
 Imports: 
+    ggplot2,
     purrr,
     rlang
