--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-URL: https://github.com/djnavarro/quartose
+URL: https://github.com/djnavarro/quartose, http://djnavarro.net/quartose/
 BugReports: https://github.com/djnavarro/quartose/issues
 Imports: 
     knitr,
