--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ RoxygenNote: 7.3.2
 URL: https://github.com/djnavarro/quartose, https://quartose.djnavarro.net/
 BugReports: https://github.com/djnavarro/quartose/issues
 Imports: 
+    cli,
     knitr,
     purrr,
     rlang,
