--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(base::format,quarto_markdown)
 S3method(base::format,quarto_section)
 S3method(base::format,quarto_span)
 S3method(base::format,quarto_tabset)
+S3method(base::print,quarto_object)
 S3method(knitr::knit_print,quarto_object)
 export(quarto_div)
 export(quarto_group)
