--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,8 @@ Suggests:
     ggplot2,
     quarto,
     rmarkdown,
+    spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Config/Needs/website: rmarkdown
+Language: en-US
